--- a/README
+++ b/README
@@ -1,6 +1,3 @@
-
-
-
 1. you must add some security and authentication and db settings by yourself in /mimi/mimir/settings.py
 2. you should import .json in / to your db(suggested MongoDB) or use /mimir/front_end/demo/Feb2018_version to do so 
 3. To call MongoClient, it is better to import /mimir/utils and use get_mongo_client with db setting
@@ -8,7 +5,31 @@ written in /mimir/mimir/settings.py
 4. If you need  Google-OAuth2 features, you can connect bigmoumou.
 5. If you wish, you can reconstruct /mimir/api since it haven't been developed.
 
+The steps could run on your mac:
+pip install pymongo
 
+* make sure install homebrew already
+brew install mongodb
+https://docs.mongodb.com/manual/tutorial/install-mongodb-on-os-x/
+
+pip3 install social-auth-app-django
+pip3 install nltk
+pip3 install pandas
+pip3 install sklearn
+pip3 install networkx
+pip3 install django-bower
+pip3 install utils
+pip3 install django
+pip3 install jieba
+
+https://api.mongodb.com/python/current/
+
+running
+mongo
+cd /Users/siemingfong/Desktop/Work/20190409\ 台泥/Robo-Advisor/Tsai_team_data/mimir/Advisor/Tsai_team_data/mimir/  
+python3 manage.py runserver
+
+http://127.0.0.1:8000/mostfintech_demo/intro/
 
 
 
